loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: not found: value estSurOrange
while (!estSurOrange())
        ^